test/visibility/except/noResolveConflict.good
noResolveConflict.chpl:2: error: symbol foo is multiply defined
noResolveConflict.chpl:11: note: also defined here
